Add drawing primitives

--- a/pyscript.toml
+++ b/pyscript.toml
@@ -1,7 +1,8 @@
 [files]
 
-"editor.py" = "editor.py"
 "lsp.py" = "lsp.py"
+"editor.py" = "editor.py"
+"drawing.py" = "drawing.py"
 
 "https://raw.githubusercontent.com/pyscript/ltk/main/ltk/jquery.py" = "ltk/jquery.py"
 "https://raw.githubusercontent.com/pyscript/ltk/main/ltk/widgets.py" = "ltk/widgets.py"
